--- a/src/orb.yml
+++ b/src/orb.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 description: |
-  Orbs for GitHub Releases
+  An orb to manage GitHub's Releases
 
 executors:
   default:
@@ -13,30 +13,48 @@ executors:
     docker:
       - image: circleci/golang:<< parameters.tag >>
 
+common-parameters: &common-parameters
+  token:
+    description: GitHub personal access token
+    type: string
+    default: $GITHUB_TOKEN
+  user:
+    description: GitHub repository user or organization
+    type: string
+    default: $CIRCLE_PROJECT_USERNAME
+  repository:
+    description: GitHub repository
+    type: string
+    default: $CIRCLE_PROJECT_REPONAME
+  tag:
+    description: Git tag to create the release from
+    type: string
+
 commands:
 
-  release:
-    description: Publish Release on GitHub
+  delete:
+    description: Delete an existing release
     parameters:
-      token:
-        description: GitHub personal access token
-        type: string
-        default: $GITHUB_TOKEN
-      user:
-        description: GitHub repository user or organization
-        type: string
-        default: $CIRCLE_PROJECT_USERNAME
-      repository:
-        description: GitHub repository
-        type: string
-        default: $CIRCLE_PROJECT_REPONAME
+      <<: *common-parameters
+    steps:
+      - internal__go-get
+      - run:
+          name: "[github-release/delete] Delete the specified release"
+          command: |
+            github-release delete \
+              --security-token << parameters.token >> \
+              --user << parameters.user >> \
+              --repo << parameters.repository >> \
+              --tag << parameters.tag >>
+
+  create:
+    description: Create a new release
+    parameters:
+      <<: *common-parameters
       target:
         description: Git commitish (commit SHA or branch name) to create the release of
         type: string
         default: $CIRCLE_SHA1
-      tag:
-        description: Git tag to create the release from
-        type: string
       title:
         description: Name of the release (Defaults to git tag)
         type: string
@@ -57,79 +75,45 @@ commands:
         description: Set true if the release is a pre-release
         type: boolean
         default: false
-      overwrite:
-        description: Set true to allow overwriting the existing release for specified git tag
-        type: boolean
-        default: false
     steps:
-      - run:
-          name: "[github-release/release] Get github-release"
-          command: go get github.com/aktau/github-release
+      - internal__go-get
       - when:
-          condition: << parameters.overwrite >>
+          condition: << parameters.path >>
           steps:
             - run:
-                name: "[github-release/release] Check whether there already exists the release"
+                name: "[github-release/create] Publish a new release with artifacts"
                 command: |
-                  set +e
-                  github-release info \
+                  ghr \
+                    --token << parameters.token >> \
+                    --username << parameters.user >> \
+                    --repository << parameters.repository >> \
+                    --commitish << parameters.target >> \
+                    --name "<< parameters.title >>" \
+                    --body "<< parameters.description >>" \
+                    <<# parameters.draft >> --draft <</ parameters.draft >> \
+                    <<# parameters.pre-release >> --prerelease <</ parameters.pre-release >> \
+                      << parameters.tag >> << parameters.path >>
+      - unless:
+          condition: << parameters.path >>
+          steps:
+            - run:
+                name: "[github-release/create] Publish a new release without artifacts"
+                command: |
+                  github-release release \
                     --security-token << parameters.token >> \
                     --user << parameters.user >> \
                     --repo << parameters.repository >> \
                     --tag << parameters.tag >> \
-                      > /dev/null 2>&1
-                  DOES_RELEASE_EXIST=$?
-                  set -e
-      - unless:
-          condition: << parameters.overwrite >>
-          steps:
-            - internal_create_new_release:
-                token: << parameters.token >>
-                user: << parameters.user >>
-                repository: << parameters.repository >>
-                tag: << parameters.tag >>
-                title: << parameters.title >>
-                description: << parameters.description >>
-                target: << parameters.target >>
-                draft: << parameters.draft >>
-                pre-release: << parameters.pre-release >>
+                    --name "<< parameters.title >>" \
+                    --description "<< parameters.description >>" \
+                    --target << parameters.target >> \
+                    <<# parameters.draft >> --draft <</ parameters.draft >> \
+                    <<# parameters.pre-release >> --pre-release <</ parameters.pre-release >>
 
-  internal_create_new_release:
-    description: "(For INTERNAL use) Create new release"
-    parameters:
-      token:
-        type: string
-      user:
-        type: string
-      repository:
-        type: string
-      tag:
-        type: string
-      title:
-        type: string
-      description:
-        type: string
-      target:
-        type: string
-      draft:
-        type: boolean
-      pre-release:
-        type: boolean
+
+  internal__go-get:
+    description: "(For INTERNAL use) Get tools to manage GitHub's releases"
     steps:
       - run:
           name: "[github-release] Get tools to manage releases"
           command: go get github.com/aktau/github-release github.com/tcnksm/ghr
-      - run:
-          name: "[github-release] Create new release"
-          command: |
-            github-release release \
-              --security-token << parameters.token >> \
-              --user << parameters.user >> \
-              --repo << parameters.repository >> \
-              --tag << parameters.tag >> \
-              --name "<< parameters.title >>" \
-              --description "<< parameters.description >>" \
-              --target << parameters.target >> \
-              <<# parameters.draft >> --draft <</ parameters.draft >> \
-              <<# parameters.pre-release >> --pre-release <</ parameters.pre-release >>
-
