--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ orbs:
 workflows:
 
   # Publish this orb as dev version
-  publish-dev-version:
+  # when pushed to the branches except for `master`
+  publish-as-dev-version:
     jobs:
       - orb-tools/publish:
           orb-path: src/orb.yml
@@ -16,3 +17,21 @@ workflows:
           filters:
             branches:
               ignore: master
+
+  # Publish this orb as prod version
+  # when pushed to `master` branch
+  publish-as-prod-version:
+    jobs:
+      - hold:
+          type: approval
+          filters:
+            branches:
+              only: master
+      - orb-tools/increment:
+          orb-path: src/orb.yml
+          orb-ref: h-matsuo/github-release
+          segment: patch
+          publish-token-variable: $CIRCLECI_API_TOKEN
+          validate: true
+          requires:
+            - hold
