--- a/src/orb.yml
+++ b/src/orb.yml
@@ -56,13 +56,11 @@ commands:
         type: string
         default: $CIRCLE_SHA1
       title:
-        description: Name of the release (Defaults to git tag)
+        description: Name of the release
         type: string
-        default: ""
       description:
-        description: Description of the release (Defaults to git tag)
+        description: Description of the release
         type: string
-        default: ""
       path:
         description: File path to upload (if directory, all files in the directory will be uploaded)
         type: string
